--- a/Styles.css
+++ b/Styles.css
@@ -1,9 +1,9 @@
 
-
+/*forma_za_unos.html*/
  .div_class table{
     table-layout: auto;
     width: 100%; 
-/*    border: 1px solid black;*/
+
     border-collapse: collapse;
     vertical-align: middle;
        
@@ -64,4 +64,77 @@ div.header_class p{
 .div_class input[type=submit]{
     height: 30px;
     width: 150px;
+} 
+/*forma_za_unos.php end*/
+
+
+/* taken from w3schools Website Layout*/
+
+* {
+    box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Create three unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+}
+
+/* Left and right column */
+.column.side {
+    width: 25%;
+}
+
+/* Middle column */
+.column.middle {
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
+} 
+/* Website Layout end  */
+
