--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ div.insert_data button:hover{
     color:green;   
 }
 
-div.insert_data input[type=text]{
+div.insert_data input[type=text], input[type=password]{
     border: 2px solid black;
     border-radius: 4px;    
 }
